test/fixtures/router/etc/routes.json
{
    "clusters":[
        {
            "name":"chat",
            "hosts":[
                { 
                    "staging":"staging-chat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"chat-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"chat-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"prod-chat.close5.com"
                }
            ]
        },
        {
            "name":"chatv2",
            "hosts":[
                { 
                    "staging":"chris-chat2.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"chat2-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"chat2-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"prod-chat-v2.close5.com"
                }
            ]
        },
        {
            "name":"core-api",
            "hosts":[
                { 
                    "staging":"staging-pgtiepi5f2.elasticbeanstalk.com"
                },
                {
                    "uat":"core-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"core-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"internal-api.close5.com"
                }
            ]
        },
        {
            "name":"recommendations",
            "hosts":[
                { 
                    "staging":"staging-recs.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"staging-recs.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"staging-recs.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"production-recommendations.close5.com"
                }
            ]
        },
        {
            "name":"search",
            "hosts":[
                { 
                    "staging":"search-staging.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"search-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"search-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"prod-search.close5.com"
                }
            ]
        },
        {
            "name":"sessions",
            "hosts":[
                { 
                    "staging":"staging-sessions.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"sessions-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"sessions-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"prod-sessions.close5.com"
                }
            ]
        },
        {
            "name":"user",
            "hosts":[
                { 
                    "staging":"staging-user.us-west-1.elasticbeanstalk.com"
                },
                {
                    "uat":"user-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "alpha":"user-uat.us-west-1.elasticbeanstalk.com"
                },
                {
                    "prod":"prod-user.close5.com"
                }
            ]
        }
    ]
}
